# patent-scraper

./: .gitignore  DESIGN.md  Makefile  README.md  pyproject.toml  requirements.md  requirements_tech.md
data/: patents_synbio_20251001_20251002.jsonl  patents_synbio_sample.jsonl  sample.xml
ingest/: __init__.py  cli.py  cli_test.py  cpc_prefixes.py  patent_xml.py  patent_xml_test.py  stream_xml.py  stream_xml_test.py
visualise/: __init__.py  app.py  cpc_filters.py  cpc_filters_test.py  data_access.py  data_access_test.py  pagination.py  session_state.py  ui_components.py
